--- a/v1/client/package.json
+++ b/v1/client/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@react-spring/parallax": "^9.5.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "helmet": "^6.0.1",
     "material-symbols": "^0.2.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
@@ -18,6 +22,7 @@
     "react-spring": "^9.5.5",
     "rellax": "^1.12.1",
     "sass": "^1.56.0",
+    "tailwindcss": "^3.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
